updated package.json to include mailin module

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
-    "mongodb": "^2.1.18",
-    "express-dot": "^0.1.0"
+    "express-dot": "^0.1.0",
+    "mailin": "^3.0.3",
+    "mongodb": "^2.1.18"
   },
   "devDependencies": {},
   "scripts": {
